--- a/個人情報管理表/.classpath
+++ b/個人情報管理表/.classpath
@@ -14,8 +14,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/pleiades/tomcat/9/lib/servlet-api.jar"/>
-	<classpathentry kind="lib" path="C:/mysql-connector-java-8.0.17.jar">
+	<classpathentry kind="lib" path="C:/Users/rugai/Downloads/pleiades/新しいフォルダー/mysql-connector-java-8.0.17.jar">
 		<attributes>
 			<attribute name="org.eclipse.jst.component.dependency" value="/WEB-INF/lib"/>
 		</attributes>
